--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
 					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
 					<button class="btn btn-primary" id="play">Play Music</button>
 					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
+					<button class="btn btn-primary" id="balloons_flying">Fly The Balloons</button>
+					<button class="btn btn-primary" id="cake_fadein">Bring The Cake</button>
 					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
-					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="wish_message">Happy Birthday My Betu </button>
+					<button class="btn btn-primary" id="story">I Wanna Say Something </button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
