--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 				<p>your smile, and the magic you bring into my life.</p>
 				<p>Let’s make this birthday unforgettable, just like you my dear love.</p>
 				
-				<p>With all my love,<br> <strong>Adii</strong></p>
+				<p>With all my love,<br> <strong>Adiii</strong></p>
 
 			</div>
 		</div>
